--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,3 +5,12 @@
     border-radius: 10px solid black; 
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
+
+a{
+    padding: 1rem;
+}
+
+a.active {
+    color: red;
+}
+  
