--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,10 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
+div{
+    margin: 1rem;
+}
+
 a{
     padding: 1rem;
 }
@@ -18,8 +22,26 @@ a.active {
     margin: 2rem;
 }
 
+.btn:hover{
+    cursor: pointer;
+}
+
 .assingmentList{
     display: block;
     margin: 1rem;
     padding: 5px;
+}
+
+.btn-update{
+    background-color: green;
+    color: aliceblue;
+}
+
+.btn-remove{
+    background-color: red;
+    color: aliceblue;
+}
+
+input {
+    display: block;
 }
