--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
-.assingmentList{
-    display: block;
-    margin: 1rem;
-    padding: 5px;
+.mycustom-grid{
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
 }
